@@ -1,1 +1,1 @@
-char cvsdate[]="2004-02-07 01:01";
+char cvsdate[]="2004-02-07 23:42";
